--- a/notebook/EDA_performance.ipynb
+++ b/notebook/EDA_performance.ipynb
@@ -185,6 +185,48 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Checking the number of unique values of each column\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "gender                          2\n",
+       "race_ethnicity                  5\n",
+       "parental_level_of_education     6\n",
+       "lunch                           2\n",
+       "test_preparation_course         2\n",
+       "math_score                     81\n",
+       "reading_score                  72\n",
+       "writing_score                  77\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 36,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "df.nunique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Check Missing values"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -210,6 +252,13 @@
    ],
    "source": [
     "df.isna().sum()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Check Duplicate Values"
    ]
   },
   {
@@ -241,188 +290,134 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>gender</th>\n",
-       "      <th>race_ethnicity</th>\n",
-       "      <th>parental_level_of_education</th>\n",
-       "      <th>lunch</th>\n",
-       "      <th>test_preparation_course</th>\n",
-       "      <th>math_score</th>\n",
-       "      <th>reading_score</th>\n",
-       "      <th>writing_score</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>female</td>\n",
-       "      <td>group B</td>\n",
-       "      <td>bachelor's degree</td>\n",
-       "      <td>standard</td>\n",
-       "      <td>none</td>\n",
-       "      <td>72</td>\n",
-       "      <td>72</td>\n",
-       "      <td>74</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>female</td>\n",
-       "      <td>group C</td>\n",
-       "      <td>some college</td>\n",
-       "      <td>standard</td>\n",
-       "      <td>completed</td>\n",
-       "      <td>69</td>\n",
-       "      <td>90</td>\n",
-       "      <td>88</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>female</td>\n",
-       "      <td>group B</td>\n",
-       "      <td>master's degree</td>\n",
-       "      <td>standard</td>\n",
-       "      <td>none</td>\n",
-       "      <td>90</td>\n",
-       "      <td>95</td>\n",
-       "      <td>93</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>male</td>\n",
-       "      <td>group A</td>\n",
-       "      <td>associate's degree</td>\n",
-       "      <td>free/reduced</td>\n",
-       "      <td>none</td>\n",
-       "      <td>47</td>\n",
-       "      <td>57</td>\n",
-       "      <td>44</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>male</td>\n",
-       "      <td>group C</td>\n",
-       "      <td>some college</td>\n",
-       "      <td>standard</td>\n",
-       "      <td>none</td>\n",
-       "      <td>76</td>\n",
-       "      <td>78</td>\n",
-       "      <td>75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>female</td>\n",
-       "      <td>group B</td>\n",
-       "      <td>associate's degree</td>\n",
-       "      <td>standard</td>\n",
-       "      <td>none</td>\n",
-       "      <td>71</td>\n",
-       "      <td>83</td>\n",
-       "      <td>78</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6</th>\n",
-       "      <td>female</td>\n",
-       "      <td>group B</td>\n",
-       "      <td>some college</td>\n",
-       "      <td>standard</td>\n",
-       "      <td>completed</td>\n",
-       "      <td>88</td>\n",
-       "      <td>95</td>\n",
-       "      <td>92</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>7</th>\n",
-       "      <td>male</td>\n",
-       "      <td>group B</td>\n",
-       "      <td>some college</td>\n",
-       "      <td>free/reduced</td>\n",
-       "      <td>none</td>\n",
-       "      <td>40</td>\n",
-       "      <td>43</td>\n",
-       "      <td>39</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>8</th>\n",
-       "      <td>male</td>\n",
-       "      <td>group D</td>\n",
-       "      <td>high school</td>\n",
-       "      <td>free/reduced</td>\n",
-       "      <td>completed</td>\n",
-       "      <td>64</td>\n",
-       "      <td>64</td>\n",
-       "      <td>67</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>9</th>\n",
-       "      <td>female</td>\n",
-       "      <td>group B</td>\n",
-       "      <td>high school</td>\n",
-       "      <td>free/reduced</td>\n",
-       "      <td>none</td>\n",
-       "      <td>38</td>\n",
-       "      <td>60</td>\n",
-       "      <td>50</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   gender race_ethnicity parental_level_of_education         lunch  \\\n",
-       "0  female        group B           bachelor's degree      standard   \n",
-       "1  female        group C                some college      standard   \n",
-       "2  female        group B             master's degree      standard   \n",
-       "3    male        group A          associate's degree  free/reduced   \n",
-       "4    male        group C                some college      standard   \n",
-       "5  female        group B          associate's degree      standard   \n",
-       "6  female        group B                some college      standard   \n",
-       "7    male        group B                some college  free/reduced   \n",
-       "8    male        group D                 high school  free/reduced   \n",
-       "9  female        group B                 high school  free/reduced   \n",
-       "\n",
-       "  test_preparation_course  math_score  reading_score  writing_score  \n",
-       "0                    none          72             72             74  \n",
-       "1               completed          69             90             88  \n",
-       "2                    none          90             95             93  \n",
-       "3                    none          47             57             44  \n",
-       "4                    none          76             78             75  \n",
-       "5                    none          71             83             78  \n",
-       "6               completed          88             95             92  \n",
-       "7                    none          40             43             39  \n",
-       "8               completed          64             64             67  \n",
-       "9                    none          38             60             50  "
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['female' 'male']\n"
+     ]
     }
    ],
    "source": [
-    "df.head(10)"
+    "print(df['gender'].unique())"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Check data types"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 38,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "RangeIndex: 1000 entries, 0 to 999\n",
+      "Data columns (total 8 columns):\n",
+      " #   Column                       Non-Null Count  Dtype \n",
+      "---  ------                       --------------  ----- \n",
+      " 0   gender                       1000 non-null   object\n",
+      " 1   race_ethnicity               1000 non-null   object\n",
+      " 2   parental_level_of_education  1000 non-null   object\n",
+      " 3   lunch                        1000 non-null   object\n",
+      " 4   test_preparation_course      1000 non-null   object\n",
+      " 5   math_score                   1000 non-null   int64 \n",
+      " 6   reading_score                1000 non-null   int64 \n",
+      " 7   writing_score                1000 non-null   int64 \n",
+      "dtypes: int64(3), object(5)\n",
+      "memory usage: 62.6+ KB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "gender\n",
+      "race_ethnicity\n",
+      "parental_level_of_education\n",
+      "lunch\n",
+      "test_preparation_course\n",
+      "math_score\n",
+      "reading_score\n",
+      "writing_score\n"
+     ]
+    }
+   ],
+   "source": [
+    "for row in df:\n",
+    "    print(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 26,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "male\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(df['gender'][3])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "categorical feature gender\n",
+      "categorical feature race_ethnicity\n",
+      "categorical feature parental_level_of_education\n",
+      "categorical feature lunch\n",
+      "categorical feature test_preparation_course\n",
+      "numeric feature math_score\n",
+      "numeric feature reading_score\n",
+      "numeric feature writing_score\n"
+     ]
+    }
+   ],
+   "source": [
+    "for feature in df.columns:\n",
+    "    if df[feature].dtype != 'O':\n",
+    "        print(\"numeric feature {0}\".format(feature))\n",
+    "    else:\n",
+    "        print(\"categorical feature {0}\".format(feature))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Adding columns for \"Total Score\" and \"Average\"\n"
    ]
   },
   {
